<resources>
    <string name="app_name">Day Night Calculator</string>
    <string name="button_ac">AC</string>
    <string name="button_percentage">%</string>
    <string name="button_divide">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiply">x</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_sub">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_add">+</string>
    <string name="button_00">00</string>
    <string name="button_0">0</string>
    <string name="button_point">.</string>
    <string name="button_equals">=</string>
    <string name="textView_text">0</string>
    <string name="value2_text">0</string>
    <string name="error">Error</string>
    <string name="point_text">0.</string>
    <string name="backspace_button_desc">backspace button</string>
    <string name="about">About</string>
</resources>
